# voiceterm

./: .coderabbit.yaml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_EXPLAINED.md  ARCHITECTURE_SIMPLE.md  ARCHITECTURE_VISUAL.md  AUDIT_STATUS.md  CHANGELOG.md  DEV_INDEX.md  DOCS_AUDIT.md  GUARD_AUDIT_FINDINGS.md  LICENSE  LICENSE-AI-PLATFORM  MASTER_DOC.md  Makefile  QUICK_START.md  README.md  RUST_GUI_AUDIT_2026-02-15.md  SYSTEM_AUDIT.md  SYSTEM_FLOWCHART.md  System_Connection_Flowchart.md  TEST_PERSISTENT_SESSION.sh  THESIS_EVIDENCE.md  Testing_Guide.md  UNIVERSAL_SYSTEM_EVIDENCE.md  UNIVERSAL_SYSTEM_PLAN.md  ZGRAPH_RESEARCH_EVIDENCE.md  agents.md  audit.md  bridge.md  code_audit.md  codesmells.md  conftest.py  delete_after_ingest.md  evidence.md  (+6 more)
dev/scripts/: README.md  autonomy_workflow_bridge.py  bootstrap_bypass_lifecycle.py  check_active_plan_sync.py  check_agents_contract.py  check_audit_traceability.py  check_cli_flags_parity.py  check_code_shape.py  check_mutation_score.py  check_release_version_parity.py  check_rust_best_practices.py  check_rust_lint_debt.py  check_rustsec_policy.py  check_screenshot_integrity.py  coderabbit_triage_bridge.py  coderabbit_triage_collect.py  coderabbit_triage_support.py  collect_clippy_warnings.py  dependency_graph_probe.py  devctl.py  generate-release-notes.sh  launch_codex_with_bootstrap_receipt.sh  mutants.py  mutants_config.py  mutants_git.py  mutants_plot.py  mutants_results.py  mutants_runner.py  mutation_ralph_workflow_bridge.py  publish-pypi.sh  pyproject.toml  ralph_ai_fix.py  release.sh  remote-bridge-loop.sh  remote_bridge_prompt.md  render_ci_badge.py  render_clippy_badge.py  render_mutation_badge.py  reviewer_loop.sh  sync_external_integrations.sh  (+3 more)
dev/scripts/artifacts/: README.md  __init__.py
dev/scripts/audits/: README.md  audit_metrics.py
dev/scripts/badges/: README.md  __init__.py  ci.py  clippy.py  common.py  mutation.py
dev/scripts/checks/: PROBE_TEMPLATE_README.md  README.md  __init__.py  _ast_helpers.py  _git_status_helpers.py  _receipt_store_scope.py  active_plan_contract.py  active_plan_snapshot.py  check_action_request_expiry_refresh.py  check_action_result_status_domain.py  check_active_plan_sync.py  check_active_topology_liveness.py  check_agents_bundle_render.py  check_agents_contract.py  check_architecture_surface_sync.py  check_audit_status_sync.py  check_bootstrap.py  check_bridge_projection_only.py  check_bundle_registry_dry.py  check_bundle_workflow_parity.py  check_check_cli_test_parity.py  check_checkpoint_budget_shape.py  check_child_actor_scope.py  check_cli_flags_parity.py  check_clippy_high_signal.py  check_code_shape.py  check_coderabbit_gate.py  check_coderabbit_ralph_gate.py  check_command_output_consumed.py  check_command_source_validation.py  check_commit_body_packet_anchors.py  check_commit_complete_proof.py  check_commit_message_row_id_resolves.py  check_compat_matrix.py  check_context_graph_snapshot_freshness.py  check_continuation_anchor_enforcement.py  check_contract_connectivity.py  check_contract_consumer_coverage_sweep.py  check_contract_registry_composite_key_uniqueness.py  (+198 more)
rust/: Cargo.toml  clippy.toml  deny.toml
rust/.cargo/: mutants.toml
rust/src/: auth.rs  legacy_ui.rs  lib.rs  mic_meter.rs  process_signal.rs  stt.rs  terminal_restore.rs  utf8_safe.rs  vad_earshot.rs  voice.rs
rust/src/audio/: mod.rs  (+6 more)
rust/tests/: main_bin.rs  voiceterm_cli.rs
rust_tui/: CHANGELOG.md  Cargo.toml  PROJECT_OVERVIEW.md  README.md  master_index.md
rust_tui/scripts/: final_test.sh  run_test.sh  simple_test.sh  test_minimal.sh  test_performance.sh  test_quick.sh  test_voice.sh
rust_tui/src/: app.rs  audio.rs  codex.rs  codex_session.rs  config.rs  doctor.rs  ipc.rs  main.rs  pty_session.rs  terminal_restore.rs  ui.rs  voice.rs
rust_tui/tests/: codex_overlay_cli.rs
src/: Cargo.toml  clippy.toml
src/src/: auth.rs  doctor.rs  legacy_ui.rs  lib.rs  lock.rs  mic_meter.rs  process_signal.rs  stt.rs  telemetry.rs  terminal_restore.rs  utf8_safe.rs  vad_earshot.rs  voice.rs
src/tests/: main_bin.rs  voiceterm_cli.rs  voxterm_cli.rs
(+4707 files in other folders)
