[package]
name = "voiceterm"
version = "1.0.93"
edition = "2021"
default-run = "voiceterm"
autobins = false
description = "Voice-first terminal overlay for Codex and Claude"
license = "MIT"
repository = "https://github.com/jguida941/codex-voice"
rust-version = "1.70"
keywords = ["voice", "terminal", "whisper", "cli"]
categories = ["command-line-utilities"]

[features]
default = ["high-quality-audio", "vad_earshot"]
high-quality-audio = ["rubato"]
vad_earshot = ["earshot"]
mutants = []
theme_studio_v2 = []

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.27"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
unicode-width = "0.1"
crossbeam-channel = "0.5"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9.42"
strip-ansi-escapes = "0.2"
vte = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "time"] }
cpal = { version = "0.16" }
whisper-rs = { version = "0.14.1", default-features = false, features = [] }
regex = "1"
toml = "0.8"
dirs = "5"
gag = "1.0"
shell-words = "1"
rubato = { version = "0.12", optional = true }
earshot = { version = "0.1", optional = true }

[[bin]]
name = "voiceterm"
path = "src/bin/voiceterm/main.rs"

[[bin]]
name = "voice_benchmark"
path = "src/bin/voice_benchmark.rs"

[[bin]]
name = "latency_measurement"
path = "src/bin/latency_measurement.rs"

[[bin]]
name = "test_crash"
path = "src/bin/test_crash.rs"

[[bin]]
name = "test_utf8_bug"
path = "src/bin/test_utf8_bug.rs"

[dev-dependencies]
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
