[package]
name = "rust_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
crossterm = "0.27"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
tempfile = "3"
unicode-width = "0.1"
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
