[package]
name = "voiceterm"
version = "1.0.89"
edition = "2021"
default-run = "voiceterm"
autobins = false

[features]
default = ["high-quality-audio", "vad_earshot"]
high-quality-audio = ["rubato"]
vad_earshot = ["earshot"]
mutants = []

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.29"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
unicode-width = "0.2"
crossbeam-channel = "0.5"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
strip-ansi-escapes = "0.2"
vte = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "time"] }
cpal = { version = "0.17" }
whisper-rs = { version = "0.15.1", default-features = false, features = [] }
regex = "1"
num_cpus = "1.17"
gag = "1.0"
shell-words = "1"
rubato = { version = "1.0", optional = true }
earshot = { version = "1.0", optional = true }

[[bin]]
name = "voiceterm"
path = "src/bin/voiceterm/main.rs"

[[bin]]
name = "voice_benchmark"
path = "src/bin/voice_benchmark.rs"

[[bin]]
name = "latency_measurement"
path = "src/bin/latency_measurement.rs"

[[bin]]
name = "test_crash"
path = "src/bin/test_crash.rs"

[[bin]]
name = "test_utf8_bug"
path = "src/bin/test_utf8_bug.rs"

[dev-dependencies]
proptest = "1"
